# telegram-summary-tool

./: .env.example  .gitignore  LICENSE  PUBLISH_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
connectors/gramjs/: fetch-chat.mjs  package-lock.json  package.json
examples/: sample-result.json
src/telegram_summary_tool/: ai_summarizer.py  cli.py  doctor.py  local_db.py  summarizer.py  telegram_export.py  tgmix_integration.py  web.py
tests/: test_cli.py  test_summarizer.py  test_telegram_export.py
